force-app/main/default/objects/Fundos__c/Fundos__c.object-meta.xml
<CustomObject>
    <description>Fundos Bernard</description>
    <label>Fundo</label>
    <nameField>
        <label>Fundo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fundos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>