force-app/main/default/objects/Fundos__c/fields/Abertura__c.field-meta.xml
<CustomField>
    <fullName>Abertura__c</fullName>
    <description>Abertura</description>
    <inlineHelpText>Abertura</inlineHelpText>
    <label>Abertura</label>
    <length>10</length>
    <type>Text</type>
</CustomField>