force-app/main/default/objects/Fundos__c/fields/Alta__c.field-meta.xml
<CustomField>
    <fullName>Alta__c</fullName>
    <description>Alta</description>
    <inlineHelpText>Alta</inlineHelpText>
    <label>Alta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>