force-app/main/default/objects/Fundos__c/fields/Baixa__c.field-meta.xml
<CustomField>
    <fullName>Baixa__c</fullName>
    <description>Baixa</description>
    <inlineHelpText>Baixa</inlineHelpText>
    <label>Baixa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>