force-app/main/default/objects/Fundos__c/fields/Chave__c.field-meta.xml
<CustomField>
    <fullName>Chave__c</fullName>
    <description>10</description>
    <inlineHelpText>10</inlineHelpText>
    <label>Chave</label>
    <length>10</length>
    <type>Text</type>
</CustomField>