force-app/main/default/objects/Fundos__c/fields/Fechamento__c.field-meta.xml
<CustomField>
    <fullName>Fechamento__c</fullName>
    <description>Fechamento</description>
    <inlineHelpText>Fechamento</inlineHelpText>
    <label>Fechamento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>