force-app/main/default/objects/Fundos__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Volume</description>
    <inlineHelpText>Volume</inlineHelpText>
    <label>Volume</label>
    <length>10</length>
    <type>Text</type>
</CustomField>